Buttloads of changes (Bet something breaks)

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,6 +6,9 @@ lib_deps =
 	adafruit/Adafruit PCD8544 Nokia 5110 LCD library@^2.0.1
 	adafruit/Adafruit SSD1306@2.5.9
 	adafruit/Adafruit WS2801 Library@1.1.1
+	C:\Users\harold\source\repos\ESP-SimHub\ESP-SimHub\lib\BleGamepad
+	C:\Users\harold\Documents\Arduino\libraries\NimBLE-Arduino\src
+	C:\Users\harold\source\repos\ESP-SimHub\ESP-SimHub\lib\Rotary-master
 	#includes fixes for esp
 	https://github.com/9khil/LedControl#913cbcebb8ceea6783bb271d385d18b99c2d5e79
 	marcoschwartz/LiquidCrystal_I2C@1.1.2
@@ -42,24 +45,24 @@ lib_deps =
 #   you're not compiling for this platform
 #
 #############################################
-[env:esp8266]
-platform = espressif8266
-# this should be set to your flavor of esp8266, for instance d1_mini
-# BOARD_LIST: https://docs.platformio.org/en/latest/boards/index.html#espressif-8266
-board = nodemcuv2
-framework = arduino
-lib_deps = 
-  	${common.lib_deps}
-	fastled/FastLED@3.4 #newer versions don't seem to work with esp8266 in my tests
-	# add any libraries that are specific for the es8266
+; [env:esp8266]
+; platform = espressif8266
+; # this should be set to your flavor of esp8266, for instance d1_mini
+; # BOARD_LIST: https://docs.platformio.org/en/latest/boards/index.html#espressif-8266
+; board = nodemcuv2
+; framework = arduino
+; lib_deps = 
+;   	${common.lib_deps}
+; 	fastled/FastLED@3.4 #newer versions don't seem to work with esp8266 in my tests
+; 	# add any libraries that are specific for the es8266
 
-build_flags = 
-	-w -DESP8266=true
-monitor_speed = 115200
-;upload_port = COM4
-;build_type = debug # set this to debug only for debugging, as it's slower.
-monitor_filters = esp8266_exception_decoder
-build_unflags = -fno-rtti # comment this out if you need more ram, but you'll need to make some type assumptions
+; build_flags = 
+; 	-w -DESP8266=true
+; monitor_speed = 115200
+; ;upload_port = COM4
+; ;build_type = debug # set this to debug only for debugging, as it's slower.
+; monitor_filters = esp8266_exception_decoder
+; build_unflags = -fno-rtti # comment this out if you need more ram, but you'll need to make some type assumptions
 
 
 #############################################
@@ -69,22 +72,22 @@ build_unflags = -fno-rtti # comment this out if you need more ram, but you'll ne
 #   you're not compiling for this platform
 #
 #############################################
-;[env:esp32]
-;platform = espressif32@^6.2
-;# this should be set to your flavor of esp32, for instance wemos_d1_mini32
-;# BOARD LIST: https://docs.platformio.org/en/latest/boards/index.html#espressif-32
-;board = esp32doit-devkit-v1
-;board_build.f_cpu = 240000000L
-;framework = arduino
-;lib_deps = 
-;	${common.lib_deps}
-;	fastled/FastLED@3.6
-;	# add any libraries that are specific for the esp32
+[env:esp32]
+platform = espressif32
+# this should be set to your flavor of esp32, for instance wemos_d1_mini32
+# BOARD LIST: https://docs.platformio.org/en/latest/boards/index.html#espressif-32
+board = upesy_wroom
+board_build.f_cpu = 240000000L
+framework = arduino
+lib_deps = 
+	${common.lib_deps}
+	fastled/FastLED@3.6
+	# add any libraries that are specific for the esp32
 
-;build_flags = 
-;	-w -DESP32=true
-;monitor_speed = 115200
-;; build_type = debug # set this to debug only for debugging, as it's slower.
-;monitor_filters = esp32_exception_decoder
-;;upload_port = COM4
+build_flags = 
+	-w -DESP32=true
+monitor_speed = 115200
+; build_type = debug # set this to debug only for debugging, as it's slower.
+monitor_filters = esp32_exception_decoder
+;upload_port = COM4
 
